try to fix build, was building nothing